tests/core/invalid/global-cycle-with-dependent/input.core
(core 0
  (types)
  (defs
    (def example::a Int (global example::b))
    (def example::b Int (global example::a))
    (def example::dependent Int (global example::a))))
